# brandy0

./: .gitignore  LICENSE  README.md
doc/: .gitignore  doc.tex  makefile
doc/report/: .gitignore  cop.sh  macros.tex  main.tex  makefile  references.bib  titlepage.tex
doc/shots/: LICENSE  config_screen_desc.xcf
src/: 1d.cpp  1d2.cpp  2dj.cpp  2djcnn.cpp  2djt.cpp  CMakeLists.txt  sol.cpp
src/app/: CMakeLists.txt  about-window.cpp  about-window.hpp  annotated-entry.cpp  annotated-entry.hpp  application-abstr.hpp  application.cpp  application.hpp  bc-selector.cpp  bc-selector.hpp  boundary-cond.hpp  brandy-window.cpp  brandy-window.hpp  config-state-abstr.cpp  config-state-abstr.hpp  config-state.cpp  config-state.hpp  config-window.cpp  config-window.hpp  conv-utils.cpp  conv-utils.hpp  display-area.cpp  display-area.hpp  display-modes.hpp  export-window.cpp  export-window.hpp  func-utils.hpp  glob.hpp  graphics.cpp  graphics.hpp  gresources.xml  hideable.hpp  listener-manager.cpp  listener-manager.hpp  main.cpp  obstacle-shape.cpp  obstacle-shape.hpp  preset-window.cpp  preset-window.hpp  ptr.hpp  (+38 more)
src/app/alias/: func.hpp  print.hpp  ptr.hpp  str.hpp  vec.hpp
src/app/shaders/: CMakeLists.txt  gresources.xml  plain-float.vs.glsl  plain.vs.glsl  rainbow.fs.glsl  white.fs.glsl
src/app/tests/: CMakeLists.txt  tests.cpp  tests.hpp
src/exper/: 2d.cpp  2djcn.cpp  2djto.cpp  compile
src/exper/inc-ana/: entries.dat0  entries.dat3  makefile  simulator.cpp  stab-data  statgen.cpp
src/exper/lap-solver/: global.h  makefile  simulator.cpp  state.h
src/exper/navier-stokes/: global.h  simulator.cpp  simulator.h  state.h
src/inc-ana/: entries.dat1  main.cpp  painter.cpp  painter.h  partialders.h  simulator.h
src/lap-solver/: global.h  main.cpp  painter.cpp  point.h  simulator.cpp  simulator.h  stab-data  stab-graph-65.ggb  stab-graph.ggb  statgen.h
src/lib/: CMakeLists.txt  grid.hpp  point.cpp  point.hpp  vec2d.cpp  vec2d.hpp
src/navier-stokes/: global.h  grid.h  linearvar.h  main.cpp  navier-stokes.cpp  painter.cpp  painter.h  partialders.h  simulator.cpp  simulator.h  statgen.cpp  vartype.h  vec2d.h
